Revision history for Neo4j::Driver

0.1703  2020-10-18

 - fix handling of index/key collisions in field names
 - deprecate experimental Record->{column_keys} access
 - deprecate experimental Path->path() method
 - warn when accessing the internals of node/rel/path objects (see issue #8)

0.17  2020-10-12

 - the Neo4j 4 default database name is reliably auto-detected (fix issue #6)
 - the option to select a database is no longer experimental
 - the option to select a database is now safely ignored on Neo4j 2/3
 - fix rare assertion failure when retrieving nodes or relations on Neo4j 4
 - get ServerInfo automatically when opening a new session
 - try to improve compatibility with outdated JSON module versions

0.16  2020-04-12

 - add experimental option to select a database specified by name (Neo4j 4)
 - fix handling of outdated JSON module versions

0.15  2020-02-20

 - support for secure communication using TLS encryption
 - add stable support for the Bolt protocol
 - remove XS dependency to support Pure Perl environments (HTTP only)
 - improve performance of running queries over HTTP
 - improve robustness of URL parsing
 - deprecate experimental mutability of auth credentials after session creation

0.14  2019-12-21

REMINDER: Neo4j::Driver 0.13 deprecated the old syntax to access nodes,
relationships and paths. You need to use the new accessor methods introduced
in 0.13, or else your code will fail with a future version of this software.

 - make Cypher type system customisable
 - add experimental filter to convert {param} to $param in Cypher queries
 - new syntax to specify the network timeout and other config options
 - allow strings containing just the protocol scheme be used as URIs
 - deprecate experimental close() method
 - deprecate experimental suppression of exceptions (die_on_error = 0)

0.13  2019-10-14

 - declare API stable
 - add record streaming interface to StatementResult